--- a/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/SignUpDialog.form
+++ b/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/SignUpDialog.form
@@ -266,7 +266,7 @@
             <Component class="javax.swing.JButton" name="btnBack">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="66" green="66" red="ff" type="rgb"/>
+                  <Color blue="3c" green="3c" red="ff" type="rgb"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="dd" green="ea" red="ff" type="rgb"/>
