--- a/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/SignUpDialog.form
+++ b/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/SignUpDialog.form
@@ -268,6 +268,9 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="3c" green="3c" red="ff" type="rgb"/>
                 </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="12" style="1"/>
+                </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="dd" green="ea" red="ff" type="rgb"/>
                 </Property>
@@ -279,6 +282,12 @@
             </Component>
             <Component class="javax.swing.JRadioButton" name="rdShowpass">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="dd" green="ea" red="ff" type="rgb"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="66" green="66" red="66" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Show password"/>
               </Properties>
               <Events>
